src/main/resources/KodeKloud-challenge/mysql-svc-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql # DNS name 
  labels:
    app: wordpress
    tier: database
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: onehr
    tier: database
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
  
---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysqlapp
spec:
  selector:
    matchLabels:
      app: onehr
      tier: database
  template:
    metadata:
      labels:
        app: onehr
        tier: database
    spec:
      containers:
      - image: mysql:5.7 # image from docker-hub
        args:
          - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
        name: mysql 
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
        - name: mysql-persistent-path
          mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
      volumes:
      - name: mysql-persistent-path # Obtaining 'volume' from PVC
        persistentVolumeClaim:
          claimName: mysql-persistent-storage
