src/main/resources/KodeKloud-challenge/wordpress-svc-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31004
      protocol: TCP
  selector:
    app: wordpress
    tier: frontend

---

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-volume
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-volume
        persistentVolumeClaim:
          claimName: wordpress-persistent-storage
